--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -49,16 +49,16 @@
         <!--        </dependency>-->
 
     </dependencies>
-        <build>
-            <pluginManagement>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0-M8</version>
-                    </plugin>
-                </plugins>
-            </pluginManagement>
-        </build>
+<!--        <build>-->
+<!--            <pluginManagement>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                        <version>3.0.0-M8</version>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </pluginManagement>-->
+<!--        </build>-->
 
 </project>
