--- a/test-execution/octane-details.properties
+++ b/test-execution/octane-details.properties
@@ -1,5 +1,5 @@
-octane-url =
-sharedspace =
-workspace =
-user =
-password =
+octane-url =http://mada-database.aws.swinfra.net:8080
+sharedspace =2003
+workspace =1005
+user =sa@nga
+password =Welcome1
