--- a/test-execution/octane-details.properties
+++ b/test-execution/octane-details.properties
@@ -1,5 +1,5 @@
-octane-url =
-sharedspace =
-workspace =
-user =
-password =
+octane-url =http://localhost:8080/dev
+sharedspace =9001
+workspace =10018
+user =sa@nga
+password =Welcome1
